--- a/local.ini
+++ b/local.ini
@@ -8,6 +8,9 @@ WORKER_ACCOUNT = worker
 WORKER_PASSWORD = worker
 MESSAGE_QUEUE_HOST = 139.162.60.41
 MESSAGE_QUEUE_PORT = 5672
+API_HOST = 139.162.60.41
+API_PORT = 8888
+
 
 [STAGING]
 MYSQL_DATA_HOST = 127.0.0.1
@@ -19,6 +22,8 @@ WORKER_ACCOUNT = worker
 WORKER_PASSWORD = worker
 MESSAGE_QUEUE_HOST = 127.0.0.1
 MESSAGE_QUEUE_PORT = 5672
+API_HOST = 139.162.60.41
+API_PORT = 8888
 
 [RELEASE]
 MYSQL_DATA_HOST = 139.162.60.41
@@ -30,3 +35,5 @@ WORKER_ACCOUNT = worker
 WORKER_PASSWORD = worker
 MESSAGE_QUEUE_HOST = 139.162.60.41
 MESSAGE_QUEUE_PORT = 5672
+API_HOST = 139.162.60.41
+API_PORT = 8888
