--- a/api.yml
+++ b/api.yml
@@ -1,7 +1,7 @@
 version: '3.0'
 services:
   api:
-    image: api:${GIT_TAG}
+    image: louisekr/api:${GIT_TAG}
     ports:
       - 8888:8888
     hostname: 'api'
